LU-17538 fid: do not use allocation set for ofd

The sequence server on ofd is allocating new sequences
to osp, the lowater/hiwater allocation sets could
result in a gap of 2000 sequences after restaring the cluster.

Change-Id: I038a9b6add9977c58b58de3aa1f4d0926063bcb2
Signed-off-by: Li Dongyang <dongyangli@ddn.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/54191
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Sergey Cheremencev <scherementsev@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>